<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numArea"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="end"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/keyArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- android:columnCountで横に何個並ぶかを決められる -->
    <GridLayout
        android:id="@+id/keyArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/calc1"
            style="@style/calc_button_style"
            android:text="@string/tasu"
            android:layout_column="3"
            android:layout_row="3"/>
        <Button
            android:id="@+id/calc2"
            style="@style/calc_button_style"
            android:text="@string/hiku"
            android:layout_column="3"
            android:layout_row="2"/>
        <Button
            android:id="@+id/calc3"
            style="@style/calc_button_style"
            android:text="@string/kakeru"
            android:layout_column="3"
            android:layout_row="1"/>
        <Button
            android:id="@+id/calc4"
            style="@style/calc_button_style"
            android:text="@string/waru"
            android:layout_column="3"
            android:layout_row="0"/>
        <Button
            android:id="@+id/calc5"
            style="@style/calc_button_style"
            android:text="@string/ikoru"
            android:layout_column="3"
            android:layout_row="4"/>
        <Button
            android:id="@+id/num0"
            style="@style/num_button_style"
            android:text="@string/num0"
            android:layout_row="4"
            android:layout_column="0"/>
        <Button
            android:id="@+id/num1"
            style="@style/num_button_style"
            android:text="@string/num1"
            android:layout_row="3"
            android:layout_column="0"/>
        <Button
            android:id="@+id/num2"
            style="@style/num_button_style"
            android:text="@string/num2"
            android:layout_row="3"
            android:layout_column="1"/>
        <Button
            android:id="@+id/num3"
            style="@style/num_button_style"
            android:text="@string/num3"
            android:layout_row="3"
            android:layout_column="2"/>
        <Button
            android:id="@+id/num4"
            style="@style/num_button_style"
            android:text="@string/num4"
            android:layout_row="2"
            android:layout_column="0"/>
        <Button
            android:id="@+id/num5"
            style="@style/num_button_style"
            android:text="@string/num5"
            android:layout_row="2"
            android:layout_column="1"/>
        <Button
            android:id="@+id/num6"
            style="@style/num_button_style"
            android:text="@string/num6"
            android:layout_row="2"
            android:layout_column="2"/>
        <Button
            android:id="@+id/num7"
            style="@style/num_button_style"
            android:text="@string/num7"
            android:layout_row="1"
            android:layout_column="0"/>
        <Button
            android:id="@+id/num8"
            style="@style/num_button_style"
            android:text="@string/num8"
            android:layout_row="1"
            android:layout_column="1"/>
        <Button
            android:id="@+id/num9"
            style="@style/num_button_style"
            android:text="@string/num9"
            android:layout_row="1"
            android:layout_column="2"/>
        <Button
            android:id="@+id/numdot"
            style="@style/num_button_style"
            android:text="@string/numdot"
            android:layout_row="4"
            android:layout_column="1"/>
        <Button
            android:id="@+id/ac"
            style="@style/num_button_style"
            android:backgroundTint="@color/ac_back"
            android:text="@string/ac"
            android:layout_row="0"
            android:layout_column="0"/>
        <Button
            android:id="@+id/backspace"
            style="@style/num_button_style"
            android:text="@string/backspace"
            android:layout_row="4"
            android:layout_column="2"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>